# slint-mobile-components

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  build.rs  justfile  showcase-verdicts.json
.cargo/: config.toml
.claude/: gen_showcase.py  page_names.rs.txt
.claude/skills/slint-mobile-components/: SKILL.md
.claude/skills/slint-ui/: SKILL.md
.github/workflows/: ci.yml  pages.yml
android-demo/: Cargo.toml  build.rs
android-demo/src/: lib.rs
android-demo/ui/: main.slint
crates/components/: Cargo.toml  build.rs
crates/components/src/: lib.rs
crates/components/ui/: _validate.slint  app-bar.slint  avatar.slint  badge.slint  banner.slint  bottom-bar.slint  bottom-nav.slint  bottom-sheet.slint  button.slint  card.slint  checkbox.slint  chip.slint  contact-row.slint  dialog.slint  divider.slint  dot-indicator.slint  drawer.slint  empty-state.slint  form-field.slint  form-section.slint  heading.slint  icon-button.slint  key-value-row.slint  leading-icon-tile.slint  list-item.slint  meta-row.slint  progress-bar.slint  radio.slint  section-header.slint  segmented-control.slint  setting-row.slint  skeleton.slint  slider.slint  snackbar.slint  spinner.slint  stat-tile.slint  stepper.slint  switch.slint  tab-bar.slint  text-field.slint
crates/map-demo/: Cargo.toml  build.rs
crates/map-demo/src/: main.rs
crates/map-demo/ui/: main.slint
crates/pages-auth/: Cargo.toml  build.rs
crates/pages-auth/src/: lib.rs
crates/pages-auth/ui/: _snapshot_scenes.slint  app-lock.slint  app-permissions.slint  login.slint  onboarding-hint.slint  onboarding.slint  signup.slint  two-factor-auth.slint  welcome-splash.slint
crates/pages-commerce/: Cargo.toml  build.rs
crates/pages-commerce/src/: lib.rs
crates/pages-commerce/ui/: _snapshot_scenes.slint  app-store-listing.slint  cart.slint  checkout.slint  grocery-list.slint  order-history.slint  order-tracking.slint  product-detail.slint  recipe.slint  restaurant-menu.slint  review-summary.slint  store-locator.slint  write-review.slint
crates/pages-finance/: Cargo.toml  build.rs
crates/pages-finance/src/: lib.rs
crates/pages-finance/ui/: _snapshot_scenes.slint  budget-overview.slint  crypto-portfolio.slint  currency-converter.slint  donation.slint  expense-report.slint  gift-card.slint  investment-detail.slint  invoice.slint  loyalty-card.slint  mortgage-calculator.slint  net-worth.slint  payment-methods.slint  payment-split.slint  paywall.slint  (+7 more)
crates/pages-health/: Cargo.toml  build.rs
crates/pages-health/src/: lib.rs
crates/pages-health/ui/: _snapshot_scenes.slint  activity-rings.slint  doctor-appointment.slint  habit-tracker.slint  insurance-claim.slint  lab-results.slint  meal-log.slint  medication.slint  meditation.slint  nutrition-label.slint  pet-adoption.slint  sleep-tracking.slint  weekly-meal-plan.slint  workout-session.slint
crates/pages-media/: Cargo.toml  build.rs
crates/pages-misc/: Cargo.toml  build.rs
crates/pages-productivity/: Cargo.toml  build.rs
crates/pages-social/: Cargo.toml  build.rs
crates/pages-social/src/: lib.rs
crates/pages-social/ui/: _snapshot_scenes.slint  address-book.slint  chat.slint  comments.slint  community-forum.slint  contact-detail.slint  dialer.slint  email-thread.slint  group-chat-list.slint  inbox.slint  message-composer.slint  news-feed.slint  post-creator.slint  post-detail.slint  profile-edit.slint  profile.slint  trending-topics.slint  video-call.slint
crates/pages-system/: Cargo.toml  build.rs
crates/pages-travel/: Cargo.toml  build.rs
crates/pages-travel/src/: lib.rs
crates/pages-travel/ui/: _snapshot_scenes.slint  boarding-pass.slint  carpool-search.slint  country-selector.slint  driver-on-the-way.slint  flight-search.slint  hotel-booking.slint  map.slint  parking-session.slint  ride-share-booking.slint  seat-selection.slint  timezone-converter.slint  transit-departures.slint  trip-itinerary.slint  turn-by-turn-nav.slint
crates/theme/: Cargo.toml  build.rs
crates/theme/src/: lib.rs
crates/theme/ui/: _validate.slint  skins.slint  theme.slint
crates/viewer/: Cargo.toml  build.rs
crates/viewer/src/: main.rs
crates/viewer/ui/: viewer.slint
crates/wasm-viewer/: Cargo.toml  build.rs
crates/wasm-viewer/assets-tiles/: ATTRIBUTION
crates/wasm-viewer/src/: lib.rs
crates/wasm-viewer/ui/: wasm-viewer.slint
crates/wasm-viewer/web/: Trunk.toml  index.html
examples/: gallery.rs  showcase.rs
maestro/: config.yaml
maestro/flows/: gallery-tabs.yaml
src/: lib.rs
tests/: behavior.rs  behavior_scenes.slint  snapshot_scenes.slint  snapshots.rs
ui/: _check.slint  app-bar.slint  avatar.slint  badge.slint  banner.slint  bottom-bar.slint  bottom-nav.slint  bottom-sheet.slint  button.slint  card.slint  checkbox.slint  chip.slint  contact-row.slint  dialog.slint  divider.slint  dot-indicator.slint  drawer.slint  empty-state.slint  gallery.slint  icon-button.slint  list-item.slint  progress-bar.slint  radio.slint  section-header.slint  segmented-control.slint  showcase.slint  skeleton.slint  slider.slint  snackbar.slint  spinner.slint  stepper.slint  switch.slint  tab-bar.slint  text-field.slint  theme.slint
ui/pages/: account-settings.slint  achievements.slint  activity-rings.slint  address-book.slint  album-detail.slint  app-error.slint  app-lock.slint  app-permissions.slint  app-store-listing.slint  appearance-settings.slint  audiobook-player.slint  boarding-pass.slint  budget-overview.slint  bug-report.slint  calculator.slint  calendar.slint  camera-capture.slint  carpool-search.slint  cart.slint  chat.slint  checkout.slint  code-review.slint  comments.slint  community-forum.slint  contact-detail.slint  countdown-event.slint  country-selector.slint  crypto-portfolio.slint  currency-converter.slint  dashboard.slint  delivery-driver.slint  dialer.slint  doctor-appointment.slint  document-scanner.slint  donation.slint  download-manager.slint  driver-on-the-way.slint  e-reader.slint  email-thread.slint  equalizer.slint  (+105 more)
xtask/: Cargo.toml
xtask/src/: categories.rs  gen_showcase.rs  main.rs  split_snapshots.rs  wire_pages.rs
(+68 files in other folders)
