[workspace]
members = ["android-demo"]
resolver = "2"
# Default cargo commands at the root operate on the library, not the
# demo APK — that's what consumers care about. `cargo apk build` from
# inside `android-demo/` (or `just demo-run`) handles the APK.
default-members = ["."]

[package]
name = "slint-mobile-components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slint UI component library and design system for mobile (Android) apps. Sister project to the slint-mobile cargo-generate template."
publish = false

[lib]
crate-type = ["rlib"]

# The slint runtime is pulled in with no backend feature: this crate is never
# `run()` standalone. Consumers (e.g. a slint-mobile-generated app) bring
# their own backend feature (`backend-android-activity-06` + `renderer-skia`
# on Android, `backend-default` on desktop) when they depend on this crate.
[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }

[build-dependencies]
slint-build = "1"

[features]
# Pull in Slint's default desktop backend + renderer so the `gallery`
# example can open a window on macOS / Linux / Windows. Off by default
# so consumers (e.g. an Android app) aren't forced to drag in winit.
gallery = ["slint/backend-default", "slint/renderer-skia"]

# Component-snapshot harness — pulls in Slint's software renderer so we
# can render scenes to a pixel buffer without a backend or display.
# Enabled when running `cargo test --features snapshots`.
snapshots = ["slint/renderer-software"]

# Behavior-test harness — uses i-slint-backend-testing to find elements
# by accessibility metadata and invoke their default actions without
# rendering. Enabled when running `cargo test --features behaviors`.
behaviors = []

# Desktop review grid — `cargo run --example showcase --features showcase`.
# Tiles every page template at native phone resolution with a pass/fail
# verdict toggle. Off by default (and `build.rs` only compiles the heavy
# `ui/showcase.slint` when this is set) so normal `cargo check` stays fast.
showcase = ["slint/backend-default", "slint/renderer-skia"]

# Desktop preview app — `cargo run --example gallery --features gallery`.
# Renders the same `Gallery` Window that `build.rs` already compiles for
# CI validation; no extra .slint file needed.
[[example]]
name = "gallery"
required-features = ["gallery"]

# Desktop review grid app — `cargo run --example showcase --features showcase`.
[[example]]
name = "showcase"
required-features = ["showcase"]

[[test]]
name = "snapshots"
required-features = ["snapshots"]

[[test]]
name = "behavior"
required-features = ["behaviors"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
i-slint-backend-testing = "1"
# Used only by the `showcase` example to read/write showcase-verdicts.json.
serde_json = "1"

[profile.dev]
opt-level = 1
