[workspace]
members = [
    "android-demo",
    "crates/theme",
    "crates/components",
    "crates/pages-auth",
    "crates/pages-commerce",
    "crates/pages-finance",
    "crates/pages-health",
    "crates/pages-media",
    "crates/pages-misc",
    "crates/pages-productivity",
    "crates/pages-social",
    "crates/pages-system",
    "crates/pages-travel",
    "crates/viewer",
    "crates/wasm-viewer",
    "crates/map-demo",
    "xtask",
]
resolver = "2"
# Default cargo commands at the root operate on the library plus the
# viewer. The library is what consumers depend on (and transitively
# pulls in every theme/components/pages-* crate so `cargo check` still
# validates the whole workspace); the viewer is what `cargo run` picks
# up — there's only one bin in this set, so no ambiguity. The android
# demo's APK build is `cargo apk build` from inside `android-demo/`
# (or `just demo-run`).
default-members = [".", "crates/viewer"]

[package]
name = "slint-mobile-components"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Slint UI component library and design system for mobile (Android) apps. Sister project to the slint-mobile cargo-generate template."
publish = false

[lib]
crate-type = ["rlib"]

# The slint runtime is pulled in with no backend feature: this crate is never
# `run()` standalone. Consumers (e.g. a slint-mobile-generated app) bring
# their own backend feature (`backend-android-activity-06` + `renderer-skia`
# on Android, `backend-default` on desktop) when they depend on this crate.
[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }
slint-mobile-theme = { path = "crates/theme" }
slint-mobile-components-widgets = { path = "crates/components" }
slint-mobile-pages-auth = { path = "crates/pages-auth" }
slint-mobile-pages-commerce = { path = "crates/pages-commerce" }
slint-mobile-pages-finance = { path = "crates/pages-finance" }
slint-mobile-pages-health = { path = "crates/pages-health" }
slint-mobile-pages-media = { path = "crates/pages-media" }
slint-mobile-pages-misc = { path = "crates/pages-misc" }
slint-mobile-pages-productivity = { path = "crates/pages-productivity" }
slint-mobile-pages-social = { path = "crates/pages-social" }
slint-mobile-pages-system = { path = "crates/pages-system" }
slint-mobile-pages-travel = { path = "crates/pages-travel" }

[build-dependencies]
slint-build = "1"
slint-mobile-theme = { path = "crates/theme" }
slint-mobile-components-widgets = { path = "crates/components" }
slint-mobile-pages-auth = { path = "crates/pages-auth" }
slint-mobile-pages-commerce = { path = "crates/pages-commerce" }
slint-mobile-pages-finance = { path = "crates/pages-finance" }
slint-mobile-pages-health = { path = "crates/pages-health" }
slint-mobile-pages-media = { path = "crates/pages-media" }
slint-mobile-pages-misc = { path = "crates/pages-misc" }
slint-mobile-pages-productivity = { path = "crates/pages-productivity" }
slint-mobile-pages-social = { path = "crates/pages-social" }
slint-mobile-pages-system = { path = "crates/pages-system" }
slint-mobile-pages-travel = { path = "crates/pages-travel" }

[features]
# Component-snapshot harness — pulls in Slint's software renderer so we
# can render scenes to a pixel buffer without a backend or display.
# Enabled when running `cargo test --features snapshots`.
snapshots = ["slint/renderer-software"]

# Behavior-test harness — uses i-slint-backend-testing to find elements
# by accessibility metadata and invoke their default actions without
# rendering. Enabled when running `cargo test --features behaviors`.
behaviors = []

[[test]]
name = "snapshots"
required-features = ["snapshots"]

[[test]]
name = "behavior"
required-features = ["behaviors"]

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
i-slint-backend-testing = "1"

[profile.dev]
opt-level = 1

# Wasm-viewer ships ~22 MB raw / ~11 MB gzipped without these knobs,
# dominated by slint-interpreter + femtovg + winit-web. The combo
# below halves the binary by enabling cross-crate LTO, a single
# codegen unit (lets LLVM inline + dead-strip aggressively across
# crate boundaries), size-tuned optimisation, and full symbol
# stripping. Native release builds (the desktop viewer, snapshot
# tests) take noticeably longer to link with `lto=fat` — but those
# builds aren't latency-critical and the size win on the wasm
# artefact is the priority.
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = "symbols"
