[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
description = "Project tooling — invoked via `cargo xtask <subcommand>`."

[dependencies]
# No external deps on purpose — xtask is rebuilt rarely but on a cold
# `target/` and bringing in `regex` blows up rustc memory by ~10× for
# work that's trivial line/anchor scanning.
