[package]
name = "slint-mobile-components-widgets"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reusable widget components (Button, Card, AppBar, etc.) for slint-mobile apps."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }
slint-mobile-theme = { path = "../theme" }

[build-dependencies]
slint-build = "1"
slint-mobile-theme = { path = "../theme" }
