[package]
name = "slint-mobile-components-map-demo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Live demo that wires a real slint_mapping::FileTileSource into the slint-mobile-components MapPage. Switch between the 6 map-using pages via CLI arg; pan/zoom over genuine OpenStreetMap tiles."
publish = false

[[bin]]
name = "map-demo"
path = "src/main.rs"

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
    "backend-default",
    "renderer-skia",
] }
slint-mapping = "0.1"
slint-mobile-pages-travel = { path = "../pages-travel" }
slint-mobile-pages-commerce = { path = "../pages-commerce" }
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }

[build-dependencies]
slint-build = "1"
slint-mapping = "0.1"
slint-mobile-pages-travel = { path = "../pages-travel" }
slint-mobile-pages-commerce = { path = "../pages-commerce" }
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }
