[package]
name = "slint-mobile-pages-health"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Page templates (health category) for slint-mobile-components."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }
# Path dep on the sibling `slint-mapping` repo so map-using pages
# can `import { MapEmbed } from "@mapping/map.slint";`.
slint-mapping = { path = "../../../slint-mapping" }

[build-dependencies]
slint-build = "1"
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }
slint-mapping = { path = "../../../slint-mapping" }
