[package]
name = "slint-mobile-pages-social"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Page templates (social category) for slint-mobile-components."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }
# Crates.io dep so map-using pages
# can `import { MapEmbed } from "@mapping/map.slint";` resolve via the
# `library_paths` map this crate registers in its build.rs.
slint-mapping = "0.1"

[build-dependencies]
slint-build = "1"
slint-mobile-theme = { path = "../theme" }
slint-mobile-components-widgets = { path = "../components" }
slint-mapping = "0.1"
