[package]
name = "slint-mobile-theme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Design tokens and color schemes for slint-mobile-components."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
slint = { version = "1", default-features = false, features = [
    "compat-1-2",
    "std",
] }

[build-dependencies]
slint-build = "1"
